Created my Page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </div>
         <div id="footer">
-            Copyright &copy; <?php echo date("Y");?> <a href="mailto:ip.popovich.1990@gmail.com">YauheniPo</a> - All rights reserved.
+            Copyright &copy; 2018 <a href="mailto:ip.popovich.1990@gmail.com">YauheniPo</a> - All rights reserved.
         </div>
     </div>
 </body>
