--- a/pages/about_me.html
+++ b/pages/about_me.html
@@ -11,9 +11,9 @@
     <div id="wrapper">
         <div id="content">
             <div id="header">
-                <a href="../index.php">Main</a>/
-                <a href="about_me.php">About Me</a>/
-                <a href="photo.php">Photo</a>
+                <a href="../index.html">Main</a>/
+                <a href="about_me.html">About Me</a>/
+                <a href="photo.html">Photo</a>
             </div>
             <div id="">
                  <h1>Junior Java Developer</h1><!--заголовок первого уровня</-->
@@ -74,7 +74,7 @@
             </div>
         </div>
         <div id="footer">
-            Copyright &copy; <?php echo date("Y");?><a href="mailto:ip.popovich.1990@gmail.com">YauheniPo</a> - All rights reserved.
+            Copyright &copy; 2018 <a href="mailto:ip.popovich.1990@gmail.com">YauheniPo</a> - All rights reserved.
         </div>
     </div>
 </body>
