--- a/pages/photo.html
+++ b/pages/photo.html
@@ -14,9 +14,9 @@
     <div id="wrapper">
         <div id="content">
             <div id="header">
-                <a href="../index.php">Main</a>/
-                <a href="about_me.php">About Me</a>/
-                <a href="photo.php">Photo</a>
+                <a href="../index.html">Main</a>/
+                <a href="about_me.html">About Me</a>/
+                <a href="photo.html">Photo</a>
             </div>
             <div id="">
                 <h1>Evgenii Popovich</h1>
@@ -55,8 +55,7 @@
             </div>
         </div>
         <div id="footer">
-            Copyright &copy;
-            <?php echo date("Y");?> <a href="mailto:ip.popovich.1990@gmail.com">YauheniPo</a> - All rights reserved.
+            Copyright &copy; 2018 <a href="mailto:ip.popovich.1990@gmail.com">YauheniPo</a> - All rights reserved.
         </div>
     </div>
     <script type="text/javascript" src="engine0/wowslider.js"></script>
