--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div id="wrapper">
         <div id="content">
             <div id="header">
-                <a href="index.php">Main</a>/
-                <a href="pages/about_me.php">About Me</a>/
-                <a href="pages/photo.php">Photo</a>
+                <a href="index.html">Main</a>/
+                <a href="pages/about_me.html">About Me</a>/
+                <a href="pages/photo.html">Photo</a>
             </div>
             <div id="">
                  <h1>Junior Java Developer</h1><!--заголовок первого уровня</-->
