--- a/index.html
+++ b/index.html
@@ -1,46 +1,56 @@
-<!DOCTYPE html>
-<!--тип документа-->
-<html>
+<!DOCTYPE html><!--тип документа-->
+<html lang="en">
 <head>
-    <meta charset='utf-8'>
-    <!--meta-работа с текстом,charset-кодировка, название кодировки</-->
-    <title>Evgenii Popovich</title>
+    <meta charset='UTF-8'><!--meta - работа с текстом, charset - кодировка, UTF-8 - название кодировки</-->
+    <title>Evgeny Popovich's Page</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/favicon.ico">
+    <script src="https://kit.fontawesome.com/8b54dace17.js"></script>
 </head>
 <body>
     <div id="wrapper">
         <div id="content">
             <div id="header">
                 <a href="index.html">Main</a>/
-                <a href="pages/about_me.html">About Me</a>/
+<!--                <a href="pages/about_me.html">About Me</a>/-->
                 <a href="pages/photo.html">Photo</a>
             </div>
             <div id="">
-                 <h1>Junior Java Developer</h1><!--заголовок первого уровня</-->
+                <h1>Evgeny Popovich</h1><!--заголовок первого уровня</-->
+            </div>
+            <div id="">
+                 <h2>Software Test Automation Engineer</h2><!--заголовок первого уровня</-->
             </div>
             <div id="center">
-                <img id="avatar" src="img/popovich.png">
-                <!-- alt-алтернативный текст, если картинка не загрузилась, src - ресурс</-->
+                <img id="avatar" src="img/popovich.png" alt="Yauheni Papovich (Evgeny Popovich / Евгений Попович)"><!-- alt-алтернативный текст, если картинка не загрузилась, src - ресурс</-->
                 <div id="box_text">
                     <div id="contacts">
-                        <p>Tel: <a href="tel:+375297261647">+375 (29) 7261647</a></p>
-                        <p>Email: <a href="mailto:ip.popovich.1990@gmail.com">ip.popovich.1990@gmail.com</a></p>
-                        <p>LinkedIn: <a href="https://www.linkedin.com/in/evgenii-popovich-068336143/" target="_blank">https://www.linkedin.com/in/evgenii-popovich-068336143/</a></p>
-                        <p>GitHub: <a href="https://github.com/YauheniPo" target="_blank">https://github.com/YauheniPo</a></p>
-                        <p>Skype:
-                            <a href="skype:joncoffi1?chat"><img alt="joncoffi1"/></a>
-                        </p>
-                    </div>
-                    <div id="mail">
-                        <p>
-                            Hi!<br> My name is <b>Evgenii Popovich</b>, I am a beginner Java Developer. I've been studying programming on courses for about an year and now I continue to study it myself. I am a results-oriented software developer. I enjoy all the challenges this industry offers; technology, customer satisfaction, innovation and on-going learning. I also understand the importance of creating highly readable and easily maintainable source code and constantly striving to learn new technologies and look to ways to better myself in this rapidly changing industry.
-                        </p>
+                          <a href="https://www.linkedin.com/in/e-popovich/">
+                               Evgeny Popovich <i class="fab fa-linkedin"></i>
+                            </a>
+                            <div></div>
+                            <a href="https://t.me/YauheniPo">
+                                @YauheniPo <i class="fab fa-telegram-plane"></i>
+                            </a>
+                            <div></div>
+                            
+                            <a href="https://github.com/YauheniPo">
+                                YauheniPo <i class="fab fa-github"></i>
+                            </a>
+                            <div></div>
+                            <a href="skype:joncoffi1?chat">
+                                joncoffi1 <i class="fab fa-skype"></i>
+                            </a>
+                            <div></div>
+                            <a href="mailto:ip.popovich.1990@gmail.com">
+                                ip.popovich.1990@gmail.com <i class="far fa-envelope"></i>
+                            </a>
                     </div>
                 </div>
             </div>
         </div>
         <div id="footer">
-            Copyright &copy; 2018 <a href="mailto:ip.popovich.1990@gmail.com">YauheniPo</a> - All rights reserved.
+            <a href="mailto:ip.popovich.1990@gmail.com">Evgeny Popovich - Software Test Automation Engineer</a>
         </div>
     </div>
 </body>
