--- a/pages/about_me.html
+++ b/pages/about_me.html
@@ -16,7 +16,7 @@
                 <a href="photo.html">Photo</a>
             </div>
             <div id="">
-                 <h1>Junior Java Developer</h1><!--заголовок первого уровня</-->
+                 <h1>Software Test Automation Engineer</h1><!--заголовок первого уровня</-->
             </div>
             <div id="center">
                 <p><img id="knowledge" src="../img/knowledge.PNG" height="350">
@@ -74,7 +74,7 @@
             </div>
         </div>
         <div id="footer">
-            Copyright &copy; 2018 <a href="mailto:ip.popovich.1990@gmail.com">YauheniPo</a> - All rights reserved.
+            <a href="mailto:ip.popovich.1990@gmail.com">YauheniPo</a>
         </div>
     </div>
 </body>
