--- a/pages/photo.html
+++ b/pages/photo.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<!--тип документа-->
 <html>
 
 <head>
-    <meta charset='utf-8'>
-    <title>Evgenii Popovich</title>
+    <meta charset='UTF-8'>
+    <title>Evgenii Popovich's Photo</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" type="text/css" href="engine0/style.css" />
+    <link rel="shortcut icon" href="../img/favicon.ico">
     <script type="text/javascript" src="engine0/jquery.js"></script>
 </head>
 
@@ -15,36 +15,35 @@
         <div id="content">
             <div id="header">
                 <a href="../index.html">Main</a>/
-                <a href="about_me.html">About Me</a>/
+<!--                <a href="about_me.html">About Me</a>/-->
                 <a href="photo.html">Photo</a>
             </div>
             <div id="">
-                <h1>Evgenii Popovich</h1>
-                <!--заголовок первого уровня</-->
+                <h1>Evgeny Popovich</h1><!--заголовок первого уровня</-->
             </div>
             <div id="wowslider-container0">
                 <div class="ws_images">
                     <ul>
-                        <li><img src="data0/images/photo1.jpg" alt="photo1" title="photo1" id="wows0_0" /></li>
-                        <li><img src="data0/images/photo2.jpg" alt="photo2" title="photo2" id="wows0_1" /></li>
-                        <li><img src="data0/images/photo3.jpg" alt="photo3" title="photo3" id="wows0_2" /></li>
-                        <li><img src="data0/images/photo4.jpg" alt="photo4" title="photo4" id="wows0_3" /></li>
-                        <li><img src="data0/images/photo5.jpg" alt="photo5" title="photo5" id="wows0_4" /></li>
+                        <li><img src="data0/images/photo1.jpg" alt="YauheniPo" title="" id="wows0_0" /></li>
+                        <li><img src="data0/images/photo2.jpg" alt="YauheniPo" title="" id="wows0_1" /></li>
+                        <li><img src="data0/images/photo3.jpg" alt="YauheniPo" title="" id="wows0_2" /></li>
+                        <li><img src="data0/images/photo4.jpg" alt="YauheniPo" title="" id="wows0_3" /></li>
+                        <li><img src="data0/images/photo5.jpg" alt="YauheniPo" title="" id="wows0_4" /></li>
                         <li>
-                            <a href="http://wowslider.net"><img src="data0/images/photo6.jpg" alt="css slideshow" title="photo6" id="wows0_5" /></a>
+                            <a href="http://wowslider.net"><img src="data0/images/photo6.jpg" alt="css slideshow" title="" id="wows0_5" /></a>
                         </li>
-                        <li><img src="data0/images/photo7.jpg" alt="photo7" title="photo7" id="wows0_6" /></li>
+                        <li><img src="data0/images/photo7.jpg" alt="YauheniPo" title="" id="wows0_6" /></li>
                     </ul>
                 </div>
                 <div class="ws_bullets">
                     <div>
-                        <a href="#" title="photo1"><span><img src="data0/tooltips/photo1.jpg" alt="photo1"/>1</span></a>
-                        <a href="#" title="photo2"><span><img src="data0/tooltips/photo2.jpg" alt="photo2"/>2</span></a>
-                        <a href="#" title="photo3"><span><img src="data0/tooltips/photo3.jpg" alt="photo3"/>3</span></a>
-                        <a href="#" title="photo4"><span><img src="data0/tooltips/photo4.jpg" alt="photo4"/>4</span></a>
-                        <a href="#" title="photo5"><span><img src="data0/tooltips/photo5.jpg" alt="photo5"/>5</span></a>
-                        <a href="#" title="photo6"><span><img src="data0/tooltips/photo6.jpg" alt="photo6"/>6</span></a>
-                        <a href="#" title="photo7"><span><img src="data0/tooltips/photo7.jpg" alt="photo7"/>7</span></a>
+                        <a href="#" title=""><span><img src="data0/tooltips/photo1.jpg" alt="YauheniPo"/>1</span></a>
+                        <a href="#" title=""><span><img src="data0/tooltips/photo2.jpg" alt="YauheniPo"/>2</span></a>
+                        <a href="#" title=""><span><img src="data0/tooltips/photo3.jpg" alt="YauheniPo"/>3</span></a>
+                        <a href="#" title=""><span><img src="data0/tooltips/photo4.jpg" alt="YauheniPo"/>4</span></a>
+                        <a href="#" title=""><span><img src="data0/tooltips/photo5.jpg" alt="YauheniPo"/>5</span></a>
+                        <a href="#" title=""><span><img src="data0/tooltips/photo6.jpg" alt="YauheniPo"/>6</span></a>
+                        <a href="#" title=""><span><img src="data0/tooltips/photo7.jpg" alt="YauheniPo"/>7</span></a>
                     </div>
                 </div>
                 <div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.net">html5 slideshow</a> by WOWSlider.com v8.8</div>
@@ -55,7 +54,7 @@
             </div>
         </div>
         <div id="footer">
-            Copyright &copy; 2018 <a href="mailto:ip.popovich.1990@gmail.com">YauheniPo</a> - All rights reserved.
+            <a href="mailto:ip.popovich.1990@gmail.com">Evgeny Popovich</a>
         </div>
     </div>
     <script type="text/javascript" src="engine0/wowslider.js"></script>
