--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><!--тип документа-->
 <html lang="en">
+
 <head>
     <meta charset='UTF-8'><!--meta - работа с текстом, charset - кодировка, UTF-8 - название кодировки</-->
     <title>Evgeny Popovich's Page</title>
@@ -7,51 +8,52 @@
     <link rel="shortcut icon" href="img/favicon.ico">
     <script src="https://kit.fontawesome.com/8b54dace17.js"></script>
 </head>
+
 <body>
-    <div id="wrapper">
-        <div id="content">
-            <div id="header">
-                <a href="index.html">Main</a>/
-<!--                <a href="pages/about_me.html">About Me</a>/-->
-                <a href="pages/photo.html">Photo</a>
-            </div>
-            <div id="">
-                <h1>Evgeny Popovich</h1><!--заголовок первого уровня</-->
-            </div>
-            <div id="">
-                 <h2>Software Test Automation Engineer</h2><!--заголовок первого уровня</-->
-            </div>
-            <div id="center">
-                <img id="avatar" src="img/popovich.png" alt="Yauheni Papovich (Evgeny Popovich / Евгений Попович)"><!-- alt-алтернативный текст, если картинка не загрузилась, src - ресурс</-->
-                <div id="box_text">
-                    <div id="contacts">
-                          <a href="https://www.linkedin.com/in/e-popovich/">
-                               Evgeny Popovich <i class="fab fa-linkedin"></i>
-                            </a>
-                            <div></div>
-                            <a href="https://t.me/YauheniPo">
-                                @YauheniPo <i class="fab fa-telegram-plane"></i>
-                            </a>
-                            <div></div>
-                            
-                            <a href="https://github.com/YauheniPo">
-                                YauheniPo <i class="fab fa-github"></i>
-                            </a>
-                            <div></div>
-                            <a href="skype:joncoffi1?chat">
-                                joncoffi1 <i class="fab fa-skype"></i>
-                            </a>
-                            <div></div>
-                            <a href="mailto:ip.popovich.1990@gmail.com">
-                                ip.popovich.1990@gmail.com <i class="far fa-envelope"></i>
-                            </a>
-                    </div>
+<div id="wrapper">
+    <div id="content">
+        <div id="header">
+            <a href="index.html">Main</a>/
+            <!--                <a href="pages/about_me.html">About Me</a>/-->
+            <a href="pages/photo.html">Photo</a>
+        </div>
+        <div id="">
+            <h1>Evgeny Popovich</h1><!--заголовок первого уровня</-->
+        </div>
+        <div id="">
+            <h2>Software Test Automation Engineer</h2><!--заголовок первого уровня</-->
+        </div>
+        <div id="center">
+            <img id="avatar" src="img/popovich.png" alt="Yauheni Papovich (Evgeny Popovich / Евгений Попович)">
+            <!-- alt-алтернативный текст, если картинка не загрузилась, src - ресурс</-->
+            <div id="box_text">
+                <div id="contacts">
+                    <a href="https://www.linkedin.com/in/e-popovich/">
+                        Evgeny Popovich <i class="fab fa-linkedin"></i>
+                    </a>
+                    <div></div>
+                    <a href="https://t.me/YauheniPo">
+                        @YauheniPo <i class="fab fa-telegram-plane"></i>
+                    </a>
+                    <div></div>
+                    <a href="https://github.com/YauheniPo">
+                        YauheniPo <i class="fab fa-github"></i>
+                    </a>
+                    <div></div>
+                    <a href="skype:joncoffi1?chat">
+                        joncoffi1 <i class="fab fa-skype"></i>
+                    </a>
+                    <div></div>
+                    <a href="mailto:ip.popovich.1990@gmail.com">
+                        ip.popovich.1990@gmail.com <i class="far fa-envelope"></i>
+                    </a>
                 </div>
             </div>
         </div>
-        <div id="footer">
-            <a href="mailto:ip.popovich.1990@gmail.com">Evgeny Popovich - Software Test Automation Engineer</a>
-        </div>
     </div>
+    <div id="footer">
+        <a href="mailto:ip.popovich.1990@gmail.com">Evgeny Popovich - Software Test Automation Engineer</a>
+    </div>
+</div>
 </body>
 </html>
