--- a/pages/photo.html
+++ b/pages/photo.html
@@ -3,16 +3,15 @@
 
 <head>
     <meta charset='UTF-8'>
-    <title>Evgenii Popovich's Photo</title>
+    <title>Evgeny Popovich's Photo</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" type="text/css" href="engine0/style.css"/>
     <link rel="shortcut icon" href="../img/favicon.ico">
-    <script type="text/javascript" src="engine0/jquery.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
 body { background-color: #fff; color: #000; padding: 0; margin: 0; }
 .container { margin: auto; padding-top: 1em; }
 .container .ism-slider { margin-left: auto; margin-right: auto; }
+
     </style>
     <link rel="stylesheet" href="ism/css/my-slider.css"/>
     <script src="ism/js/ism-2.2.min.js"></script>
@@ -29,34 +28,25 @@ body { background-color: #fff; color: #000; padding: 0; margin: 0; }
         <div id="">
             <h1>Evgeny Popovich</h1><!--заголовок первого уровня</-->
         </div>
+
         <div class='container'>
+
             <div class="ism-slider" id="my-slider">
                 <ol>
+                    <li>
+                        <img src="data0/images/photo0.jpg">
+                    </li>
                     <li>
                         <img src="data0/images/photo1.jpg">
                     </li>
                     <li>
                         <img src="data0/images/photo2.jpg">
                     </li>
-                    <li>
-                        <img src="data0/images/photo3.jpg">
-                    </li>
-                    <li>
-                        <img src="data0/images/photo4.jpg">
-                    </li>
-                    <li>
-                        <img src="data0/images/photo5.jpg">
-                    </li>
-                    <li>
-                        <img src="data0/images/photo6.jpg">
-                    </li>
-                    <li>
-                        <img src="data0/images/photo7.jpg">
-                    </li>
                 </ol>
             </div>
         </div>
     </div>
+
     <div id="footer">
         <a href="mailto:ip.popovich.1990@gmail.com">Evgeny Popovich - Software Test Automation Engineer</a>
     </div>
