--- a/pages/about_me.html
+++ b/pages/about_me.html
@@ -16,7 +16,7 @@
                 <a href="photo.html">Photo</a>
             </div>
             <div id="">
-                 <h1>Software Test Automation Engineer</h1><!--заголовок первого уровня</-->
+                 <h1>Fullstack QA | DevTestOps Engineer | SDET | AQA Tech Lead | AQA Team Lead</h1><!--заголовок первого уровня</-->
             </div>
             <div id="center">
                 <p><img id="knowledge" src="../img/knowledge.PNG" height="350">
