--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1>Evgeny Popovich</h1><!--заголовок первого уровня</-->
         </div>
         <div id="">
-            <h2>Software Test Automation Engineer</h2><!--заголовок первого уровня</-->
+            <h2>Fullstack QA | DevTestOps Engineer | SDET | AQA Tech Lead | AQA Team Lead</h2><!--заголовок первого уровня</-->
         </div>
         <div id="center">
             <img id="avatar" src="img/popovich.png" alt="Yauheni Papovich (Evgeny Popovich / Евгений Попович)">
