--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
             <!-- alt-алтернативный текст, если картинка не загрузилась, src - ресурс</-->
             <div id="box_text">
                 <div id="contacts">
+                    <!-- Кнопка для скачивания файла -->
+                    <a href="https://drive.google.com/file/d/1pbNmVzbjR4_8N80bx8PQDT6z7tnUSijn/view?usp=sharing" download>
+                        Download CV <i class="fas fa-download"></i>
+                    </a>
                     <a href="https://www.linkedin.com/in/e-popovich/">
                         Evgeny Popovich <i class="fab fa-linkedin"></i>
                     </a>
