--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html><!--тип документа-->
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset='UTF-8'><!--meta - работа с текстом, charset - кодировка, UTF-8 - название кодировки</-->
+    <meta charset='UTF-8'>
     <title>Evgeny Popovich's Page</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="shortcut icon" href="img/favicon.ico">
-    <script src="https://kit.fontawesome.com/8b54dace17.js"></script>
 </head>
 
 <body>
@@ -14,24 +14,23 @@
     <div id="content">
         <div id="header">
             <a href="index.html">Main</a>/
-            <!--                <a href="pages/about_me.html">About Me</a>/-->
             <a href="pages/photo.html">Photo</a>
         </div>
-        <div id="">
-            <h1>Evgeny Popovich</h1><!--заголовок первого уровня</-->
+        <div>
+            <h1>Evgeny Popovich</h1>
         </div>
-        <div id="">
-            <h2>Fullstack QA | DevTestOps Engineer | SDET | AQA Tech Lead | AQA Team Lead</h2><!--заголовок первого уровня</-->
+        <div>
+            <h2>Fullstack QA | DevTestOps Engineer | SDET | AQA Tech Lead | AQA Team Lead</h2>
         </div>
         <div id="center">
             <img id="avatar" src="img/popovich.png" alt="Yauheni Papovich (Evgeny Popovich / Евгений Попович)">
-            <!-- alt-алтернативный текст, если картинка не загрузилась, src - ресурс</-->
             <div id="box_text">
                 <div id="contacts">
                     <!-- Кнопка для скачивания файла -->
-                    <a href="https://drive.google.com/file/d/1pbNmVzbjR4_8N80bx8PQDT6z7tnUSijn/view?usp=sharing" download>
+                    <a href="https://drive.google.com/file/d/1pbNmVzbjR4_8N80bx8PQDT6z7tnUSijn/view?usp=sharing" target="_blank">
                         Download CV <i class="fas fa-download"></i>
                     </a>
+                    <div></div>
                     <a href="https://www.linkedin.com/in/e-popovich/">
                         Evgeny Popovich <i class="fab fa-linkedin"></i>
                     </a>
