--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div id="box_text">
                 <div id="contacts">
                     <!-- Кнопка для скачивания файла -->
-                    <a href="https://drive.google.com/file/d/1pbNmVzbjR4_8N80bx8PQDT6z7tnUSijn/view?usp=sharing" target="_blank">
+                      <a href="https://drive.google.com/file/d/1pbNmVzbjR4_8N80bx8PQDT6z7tnUSijn/view?usp=sharing" target="_blank" class="download-button">
                         Download CV <i class="fas fa-download"></i>
                     </a>
                     <div></div>
