Download-CV-button

--- a/index.html
+++ b/index.html
@@ -20,16 +20,14 @@
             <h1>Evgeny Popovich</h1>
         </div>
         <div>
-            <h2>Fullstack QA | DevTestOps Engineer | SDET | AQA Tech Lead | AQA Team Lead</h2>
+            <h2>Fullstack QA / DevTestOps Engineer / SDET / AQA Tech Lead / AQA Team Lead</h2>
         </div>
         <div id="center">
             <img id="avatar" src="img/popovich.png" alt="Yauheni Papovich (Evgeny Popovich / Евгений Попович)">
             <div id="box_text">
                 <div id="contacts">
-                    <!-- Кнопка для скачивания файла -->
-                      <a href="https://drive.google.com/file/d/1pbNmVzbjR4_8N80bx8PQDT6z7tnUSijn/view?usp=sharing" target="_blank" class="download-button">
-                        Download CV <i class="fas fa-download"></i>
-                    </a>
+                    <a href="https://drive.google.com/file/d/1pbNmVzbjR4_8N80bx8PQDT6z7tnUSijn/view?usp=sharing" class="button">
+                        <span>Download CV</span></a>
                     <div></div>
                     <a href="https://www.linkedin.com/in/e-popovich/">
                         Evgeny Popovich <i class="fab fa-linkedin"></i>
