--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
             <img id="avatar" src="img/popovich.png" alt="Yauheni Papovich (Evgeny Popovich / Евгений Попович)">
             <div id="box_text">
                 <div id="contacts">
-                    <a href="https://drive.google.com/file/d/1pbNmVzbjR4_8N80bx8PQDT6z7tnUSijn/view?usp=sharing" class="button">
+                    <a href="https://drive.google.com/file/d/1pbNmVzbjR4_8N80bx8PQDT6z7tnUSijn/view?usp=sharing"
+                       class="button" style="margin-bottom: 20px;">
                         <span>Download CV</span></a>
                     <div></div>
-                    <a href="https://www.linkedin.com/in/e-popovich/">
+                    <a href="https://www.linkedin.com/in/evgeny-popovich/">
                         Evgeny Popovich <i class="fab fa-linkedin"></i>
                     </a>
                     <div></div>
