--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img id="avatar" src="img/popovich.png" alt="Yauheni Papovich (Evgeny Popovich / Евгений Попович)">
             <div id="box_text">
                 <div id="contacts">
-                    <a href="https://drive.google.com/file/d/1pbNmVzbjR4_8N80bx8PQDT6z7tnUSijn/view?usp=sharing"
+                    <a href="https://docs.google.com/document/d/1VBy0iw40bdDYPPkWVxyd_FIseGaqaO86qMuwnqIKK8s/edit?usp=sharing"
                        class="button" style="margin-bottom: 20px;">
                         <span>Download CV</span></a>
                     <div></div>
